--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -11,7 +11,7 @@
       <img class="stat-button no-border expand" src="/systems/honey-heist/resources/icons/bear.svg" />
       <input class="stat-value" name="data.stats.bear" data-type="Number" value="{{data.stats.bear}}"
         readonly="readonly" />
-      <img class="stat-roll-single expand no-border" title="{{localize 'HH.BearRollTooltip'}}" data-roll="d6"
+      <img class="stat-roll-single expand no-border" title="{{localize 'HH.BearRollTooltip'}}" data-roll="1d6"
         src="/systems/honey-heist/resources/icons/die-six.svg" />
       <img class="stat-roll-double expand no-border" title="{{localize 'HH.BearRollWithSkillTooltip'}}"
         data-roll="2d6kl" src="/systems/honey-heist/resources/icons/die-six-double.svg" />
@@ -21,7 +21,7 @@
       <img class="stat-button no-border expand" src="/systems/honey-heist/resources/icons/criminal.svg" />
       <input class="stat-value" name="data.stats.criminal" data-type="Number" value="{{data.stats.criminal}}"
         readonly="readonly" />
-      <img class="stat-roll-single expand no-border" data-roll="d6" title="{{localize 'HH.CriminalRollTooltip'}}"
+      <img class="stat-roll-single expand no-border" data-roll="1d6" title="{{localize 'HH.CriminalRollTooltip'}}"
         src="/systems/honey-heist/resources/icons/die-six.svg" />
       <img class="stat-roll-double expand no-border" data-roll="2d6kl"
         title="{{localize 'HH.CriminalRollWithSkillTooltip'}}"
@@ -36,72 +36,72 @@
         <label>{{localize 'HH.BearDesciptor'}}</label>
         <select name="data.descriptor" data-type="String">
           {{#select data.descriptor}}
-            {{#each data.descriptors as |descriptor key|}}
-              <option value="{{key}}">{{descriptor.label}}</option>
-            {{/each}}
+          {{#each data.descriptors as |descriptor key|}}
+          <option value="{{key}}">{{descriptor.label}}</option>
+          {{/each}}
           {{/select}}
         </select>
-        <img class="attribute-roll expand no-border" data-roll="d6+1"
+        <img class="attribute-roll expand no-border" data-roll="1d6+1"
           src="/systems/honey-heist/resources/icons/die-six.svg" height="25" width="25" />
       </div>
       <div class="attribute">
         <label>{{localize 'HH.BearType'}}</label>
         <select name="data.bear-type" data-type="String">
           {{#select data.bear-type}}
-            {{#each data.bear-types as |bear-type key|}}
-              <option value="{{key}}">{{bear-type.label}}</option>
-            {{/each}}
+          {{#each data.bear-types as |bear-type key|}}
+          <option value="{{key}}">{{bear-type.label}}</option>
+          {{/each}}
           {{/select}}
         </select>
-        <img class="attribute-roll expand no-border" data-roll="d6+1"
+        <img class="attribute-roll expand no-border" data-roll="1d6+1"
           src="/systems/honey-heist/resources/icons/die-six.svg" height="25" width="25" />
       </div>
       <div class="attribute">
         <label>{{localize 'HH.BearRole'}}</label>
         <select name="data.role" data-type="String">
           {{#select data.role}}
-            {{#each data.roles as |role key|}}
-              <option value="{{key}}">{{role.label}}</option>
-            {{/each}}
+          {{#each data.roles as |role key|}}
+          <option value="{{key}}">{{role.label}}</option>
+          {{/each}}
           {{/select}}
         </select>
-        <img class="attribute-roll expand no-border" data-roll="d6+1"
+        <img class="attribute-roll expand no-border" data-roll="1d6+1"
           src="/systems/honey-heist/resources/icons/die-six.svg" height="25" width="25" />
       </div>
       <div class="attribute">
         <label>{{localize 'HH.BearHat'}}</label>
         <select id="hat-roll" name="data.hat" data-type="String">
           {{#select data.hat}}
-            {{#each data.hats as |hat key|}}
-              <option value="{{key}}">{{hat.label}}</option>
-            {{/each}}
+          {{#each data.hats as |hat key|}}
+          <option value="{{key}}">{{hat.label}}</option>
+          {{/each}}
           {{/select}}
         </select>
-        <img class="attribute-roll expand no-border" data-roll="d8+1"
+        <img class="attribute-roll expand no-border" data-roll="1d8+1"
           src="/systems/honey-heist/resources/icons/die-eight.svg" height="25" width="25" />
       </div>
       <div class="attribute hat2">
         <label>{{localize 'HH.BearHat1'}}</label>
         <select name="data.hat2a" data-type="String">
           {{#select data.hat2a}}
-            {{#each (removeProperty data.hats "roll-twice") as |hat key|}}
-              <option value="{{key}}">{{hat.label}}</option>
-            {{/each}}
+          {{#each (removeProperty data.hats "roll-twice") as |hat key|}}
+          <option value="{{key}}">{{hat.label}}</option>
+          {{/each}}
           {{/select}}
         </select>
-        <img class="attribute-roll expand no-border" data-roll="d7+1"
+        <img class="attribute-roll expand no-border" data-roll="1d7+1"
           src="/systems/honey-heist/resources/icons/die-eight.svg" height="25" width="25" />
       </div>
       <div class="attribute hat2">
         <label>{{localize 'HH.BearHat2'}}</label>
         <select name="data.hat2b" data-type="String">
           {{#select data.hat2b}}
-            {{#each (removeProperty data.hats "roll-twice") as |hat key|}}
-              <option value="{{key}}">{{hat.label}}</option>
-            {{/each}}
+          {{#each (removeProperty data.hats "roll-twice") as |hat key|}}
+          <option value="{{key}}">{{hat.label}}</option>
+          {{/each}}
           {{/select}}
         </select>
-        <img class="attribute-roll expand no-border" data-roll="d7+1"
+        <img class="attribute-roll expand no-border" data-roll="1d7+1"
           src="/systems/honey-heist/resources/icons/die-eight.svg" height="25" width="25" />
       </div>
     </div>
